@@ -134,7 +134,7 @@ int	PROC_MEMORY(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 
 	while (NULL != (entries = readdir(dir)))
 	{
-		if (-1 == fd)
+		if (-1 != fd)
 		{
 			close(fd);
 			fd = -1;
@@ -177,7 +177,7 @@ int	PROC_MEMORY(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 	}
 
 	closedir(dir);
-	if (-1 == fd)
+	if (-1 != fd)
 		close(fd);
 #else
 	while (0 < getprocs(&procsinfo, (int)sizeof(struct procsinfo), NULL, 0, &pid, 1))
@@ -304,7 +304,7 @@ int	PROC_NUM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 
 	while (NULL != (entries = readdir(dir)))
 	{
-		if (-1 == fd)
+		if (-1 != fd)
 		{
 			close(fd);
 			fd = -1;
@@ -337,7 +337,7 @@ int	PROC_NUM(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *r
 	}
 
 	closedir(dir);
-	if (-1 == fd)
+	if (-1 != fd)
 		close(fd);
 #else
 	while (0 < getprocs(&procsinfo, (int)sizeof(struct procsinfo), NULL, 0, &pid, 1))
